working version with speech rec play, pause, skip

--- a/popup.html
+++ b/popup.html
@@ -10,12 +10,29 @@
 <body>
     <h1>YT Continue v0.1</h1>
     <p>Skip the "Are you still watching?" message while listening to &#127925 on YT</p>
-    <div class="yt-continue-toggle">
-        <input type="checkbox" name="yt-continue-toggle" class="yt-continue-toggle-checkbox" id="myyt-continue-toggle" tabindex="0" checked>
-        <label class="yt-continue-toggle-label" for="myyt-continue-toggle">
-            <span class="yt-continue-toggle-inner"></span>
-            <span class="yt-continue-toggle-switch"></span>
-        </label>
+    <div>
+        <div class="inline">
+            <p class="inline">Enable YT Continue</p>
+        </div>
+        <div class="yt-continue-toggle inline">
+            <input type="checkbox" name="yt-continue-toggle" class="yt-continue-toggle-checkbox"
+                id="myyt-continue-toggle" tabindex="0" checked>
+            <label class="yt-continue-toggle-label" for="myyt-continue-toggle">
+                <span class="yt-continue-toggle-inner"></span>
+                <span class="yt-continue-toggle-switch"></span>
+            </label>
+        </div>
+    </div>
+    <div>
+        <h3 class="inline">Speech Controls</h3>
+        <div class="yt-continue-toggle inline">
+            <input type="checkbox" name="speech-rec-toggle" class="yt-continue-toggle-checkbox" id="speech-rece-toggle"
+                tabindex="1">
+            <label class="yt-continue-toggle-label" for="speech-rece-toggle">
+                <span class="yt-continue-toggle-inner"></span>
+                <span class="yt-continue-toggle-switch"></span>
+            </label>
+        </div>
     </div>
 </body>
 
